# charot

./: .gitignore  MANIFEST.in  README.md  config.yaml  pyproject.toml  requirements.txt  tqc.py
models/attention/: attention_agent.py  attention_buffer_agent.py
models/memoryless/: base.py
plot/: plotting.py
solver/: KS_environment.py
src/charot/: __init__.py  agents_tqc.py  tqc.py
src/charot/models/attention/: __init__.py  attention_agent.py  attention_buffer_agent.py  attention_lstm_buffer_agent.py  attention_onememory_agent.py  transformers.py
src/charot/models/lstm/: buffer_lstm.py  lstm.py
src/charot/models/memoryless/: __init__.py
src/charot/plot/: __init__.py  plotting.py
src/charot/solver/: KS_environment.py  KS_solver.py  __init__.py
src/charot/utils/: __init__.py  plot.py
utils/: experiment_name.py
